basic login+register working. docker too